Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignNumberObject.quorum
class Main
    action Main
        Number n
        Object o
        number num = 0.0
        n:SetValue(7.5)
        o = cast(Object, b)
        num = cast(number, o)
        if num = 7.5
            output "passed"
        end
    end
end
